# Art-of-Computer-Programming

./: README.md  pyproject.toml  utilities.py
MIX/: instruction_model.py  mix_simulator.py
applications/: counters_game.py  get_primes_numbers.py
exercises/chapter_1/one/: euclids_algorithm.py  excerise_one.py  exercise_six.py  run_euclids_algorithm.py
exercises/chapter_1/two/: binomial_coefficients.py  calculate_modulus.py  factorial.py  fibonacci_numbers.py  harmonic_numbers.py  log_calculator.py  log_constants.json  log_table.py  only_ones.py
exercises/chapter_2/linked_allocation/: partial_sorting.py  topological_sort.py
exercises/chapter_2/linked_list/: card.py  deck.py
tests/: test_bionomial_coefficients.py
tests/MIX/: test_mix_simulator.py
tests/chapter_1/one/: test_euclids_algorithm.py  test_excerise_one.py  test_exercise_one.py  test_exercise_six.py
tests/chapter_1/two/: test_calculate_modulus.py  test_factorial.py  test_log_calculator.py
tests/chapter_2/: test_topological_sort.py
