[tool.poetry]
name = "art-of-computer-programming"
version = "0.1.0"
description = "My attempts to work through the excerises of the classical work"
authors = ["Jonathan <Jjh201104@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.5"
numpy = "^1.24.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
